[] v1.9.0
Added 	: 
Added	: Change the default file icon.
Change	: No empty line needed at the end of the command file.


[2008-01-22] v1.8.8
Fixed	: A serious bug that will crash the program in ** mode.

[2008-01-11] v1.8.7
Change	: Updated readme.
Added	: Support multiple wildcards separated by "|" .

[2007-12-24] v1.8.6
Change	: Updated readme.
Fixed	: Crash with empty path environment variable.
Change	: Use new method to tell sub menus from menu items.
Added	: Open run dialog from context menu.
Added	: Mid click open context menu with left mouse button being pressed down.

[2007-11-19] v1.8.5
Added 	: Language selection option.
Added	: Mid mouse click option; to enable this, TL.dll is required.
Change	: Updated language files.
Change	: Show menu at mouse cursor position when TrayLauncher is reopened.
Change	: Check item icon.
Fixed	: Menu gets blank.

[2007-11-12] v1.8.3
Added	: 5 new skins(blue, green, gray, or, red) by Anthony.
Change	: Updated French translation by Anthony.
Fixed	: Skin menu does not work.

[2007-11-09] v1.8.2
Change	: Updated readme.
Fixed	: AutoStart sometimes does not work.
Added	: Run dialog : Alt-Enter to display the file property.
Added	: French translation by Chris
Added	: Run dialog : Drag and drop support and tooltip.
Fixed	: Run dialog : sometimes does not get the correct executable path.
Change	: Some minor changes;
Change	: Updated the default command file "TLCmd.txt".

[2007-09-27] v1.8.1
Change	: Removed the manifest file.
Fixed	: History list not saved in the correct order.

[2007-09-22] v1.8
Change	: Updated readme.
Added   : Menus are now skinable, two simple skins are included by default.
Added	: Run dialog history is saved in TL.ini when quit.
Added	: Run dialog : Search registry for proper executable files.
Fixed:	: Run dialog box do not set the correct working directory.
Added	: TL.ini : Show/hide hidden files and folders for wildcard items.
Change	: Commandline parameters removed.

v1.6.0.370